--- a/legend-pure-ide-light/src/main/web/style/components/editor/aux-panel/_test-runner-panel.scss
+++ b/legend-pure-ide-light/src/main/web/style/components/editor/aux-panel/_test-runner-panel.scss
@@ -220,7 +220,7 @@
       overflow: overlay;
       padding: 1.5rem;
       line-height: 2rem;
-      font-family: 'Source Code Pro';
+      font-family: 'Fira Code';
       font-size: 1.2rem;
     }
   }
