use new split-pane manager

--- a/legend-pure-ide-light/src/main/web/style/main.scss
+++ b/legend-pure-ide-light/src/main/web/style/main.scss
@@ -26,8 +26,8 @@
 @import 'base/context-menu';
 
 // Reset (overrie library styles)
-@import 'reset/split-pane';
 @import 'reset/monaco-editor';
+@import 'reset/react-reflex';
 
 // Components
 @import 'components/shared';
