--- a/legend-pure-ide-light/src/main/web/style/base/_menu.scss
+++ b/legend-pure-ide-light/src/main/web/style/base/_menu.scss
@@ -14,7 +14,7 @@
  * limitations under the License.
  */
 
-.context-menu {
+.menu {
   background: var(--color-dark-grey-100);
   border: 0.1rem solid var(--color-dark-grey-50);
   padding: 0.5rem 0;
@@ -29,6 +29,11 @@
     color: var(--color-light-grey-400);
     height: 2.8rem;
     padding: 0 1rem;
+  }
+
+  &__item--selected {
+    font-weight: 700;
+    background: var(--color-dark-blue-shade-100);
   }
 
   &__item__icon {
