--- a/legend-pure-ide-light/src/main/web/style/components/_editor.scss
+++ b/legend-pure-ide-light/src/main/web/style/components/_editor.scss
@@ -36,6 +36,7 @@
     @include flexHCenter;
     background: var(--color-dark-grey-80);
     flex: 1 0 auto;
+    width: calc(100% - 5rem);
   }
 
   &__content {
