--- a/legend-pure-ide-light/src/main/web/packages/legend-pure-ide/style/components/editor/_command.scss
+++ b/legend-pure-ide-light/src/main/web/packages/legend-pure-ide/style/components/editor/_command.scss
@@ -18,6 +18,7 @@
 
 .command-modal {
   width: 60rem;
+  padding: 0.5rem;
 
   &__container {
     overflow-y: hidden !important;
@@ -27,6 +28,11 @@
     overflow-y: initial !important;
   }
 
+  .modal__title {
+    padding: 0.3rem;
+    font-size: 1.6rem;
+  }
+
   .selector-input__menu {
     z-index: 1;
   }
@@ -34,7 +40,6 @@
 
 .command-modal__content {
   display: flex;
-  margin-top: 1rem;
 
   &__form {
     display: flex;
