Pure IDE Runtime Options Panel

--- a/legend-pure-ide-light/src/main/web/packages/legend-pure-ide/style/components/editor/_auxiliary-panel.scss
+++ b/legend-pure-ide-light/src/main/web/packages/legend-pure-ide/style/components/editor/_auxiliary-panel.scss
@@ -19,6 +19,7 @@
 @forward 'aux-panel/console-panel';
 @forward 'aux-panel/search-panel';
 @forward 'aux-panel/test-runner-panel';
+@forward 'aux-panel/runtimeoptions-panel';
 
 .auxiliary-panel {
   width: 100%;
